	when you see what we do with this future, you'll be happy for the
	switch.

	The good news is that most of the basics work.  Transparency still
	works, and the basic image stuff works.  Most users won't notice any
	major problems, so long as your Imlib2 is 100% up-to-date.

	However, a few things still don't work:

	1.  Auto mode is a bit broken.  You'll get X errors in XFree86 4.0.
	Don't use it if you're running XFree 4.

	2.  Color modifiers for images don't work.  At all.

	3.  Transparency shading/tinting will not work in 8bpp or lower.  Life
	blows sometimes.  Sorry.  Time for a real video card. :-)

	4.  The built-in icon is broken.

	5.  You WILL need to update your theme.cfg files.  The borders on the
	horizontal and vertical bar images were incorrect when combined with
	the new anti-aliased scaling.  The horizontal bars should have a right
	border of 3.  Vertical bars should have a bottom border of 3.  The
	menu images should have both right *and* bottom borders of 3.  You can
	either make those changes by hand, or use the --with-theme-update
	option to autogen.sh.  Your call.

	I think that covers everything I've run into.  I will point out that
	I don't really take advantage of a lot of the Imlib2 features just
	yet.  My first priority is to make all the stuff that worked before
	work again (or at least the important stuff).  Then I'll work on
	new features.

	So there it is.  If you're not ready for it, don't use it.  But if you
	are, I hope you like it.
	
-------------------------------------------------------------------------------
Wed Apr 12 21:46:41 PDT 2000	Michael Jennings <mej@eterm.org>

	Fixed auto mode problems.  That was a really dumb oversight.
	
-------------------------------------------------------------------------------
Thu Apr 13 21:15:03 PDT 2000	Michael Jennings <mej@eterm.org>

	Fixed an image loading problem.
	
-------------------------------------------------------------------------------